--- a/index.html
+++ b/index.html
@@ -53,6 +53,37 @@
                 </div>
             </div>
         </section>
+        <!-- What i do section -->
+    <section class="what i do">
+        <h3 class="section-title">What I do</h3>
+        <!-- .skills-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+        <div class="skills-container">
+            <div class="skill">
+                <img src="images/icons/js.png" alt="">
+                <p class="skill-title">Vanilla JavaScript</p>
+                <p class="skill-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui id eum a placeat, labore culpa.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/react.png" alt="">
+                <p class="skill-title">React</p>
+                <p class="skill-description">Unde numquam, officia dolores quos hic delectus nesciunt commodi ad nihil accusantium possimus provident obcaecati.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/nodejs.png" alt="">
+                <p class="skill-title">Node JS</p>
+                <p class="skill-description">Veniam, quo aut tempore tenetur ex soluta? Qui iste assumenda consequuntur corporis, nulla odit quod.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/mongo.png" alt="">
+                <p class="skill-title">Mongodb</p>
+                <p class="skill-description">Dicta delectus molestias odit enim cumque tenetur magni commodi beatae dolorem, quod non, eum magnam!</p>
+            </div>
+        </div>
+    </section>
+    <!-- Resume section -->
+    <section class="resume">
+        <h3 class="section-title">A summary of My Resume</h3>
+    </section>
     </main>
     <footer>
 
